tests/ValidProofs/botE.fitch
|竓･
|---
|P(x) (竓･E) 1