tests/InvalidRules/botE%2.fitch
|竓､
|---
|竓･ (竓･E) 1
